Fixed issue getting the TaxLogs, added username to the acual note.

--- a/SWTA/Index.html
+++ b/SWTA/Index.html
@@ -49,8 +49,6 @@
     </div>
   </md-toolbar>
 
-
-
   <md-sidenav md-component-id="filterRight"
               class="md-sidenav-right md-whiteframe-z2">
     <section>
@@ -139,7 +137,8 @@
 
   </md-sidenav>
 
-  <div style="height: calc(100% - 64px); width: 100%;"
+  <div style="height: calc(100% - 64px); 
+              width: 100%;"
               layout="row"
               layout-align="center start"
               layout-wrap
