--- a/SWTA/Index.html
+++ b/SWTA/Index.html
@@ -126,6 +126,19 @@
             Solid Waste Roll
           </a>
         </md-item>
+        <md-item>
+          <a target="_blank"
+             href="http://claybccreport/reports/report/Solid%20Waste/SolidWasteRoll%20(Not%20for%20Public%20Use)">
+            Solid Waste Un-Redacted
+          </a>
+        </md-item>
+        
+        <md-item>
+          <a target="_blank"
+             href="http://claybccreport/Reports/report/Solid%20Waste/SolidWasteCO">
+            CO Data Report
+          </a>
+        </md-item>
       </md-list>
 
     </section>
